Fix leaderboard spacing and header font-size

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -5,6 +5,7 @@
   > h1 {
     font-weight: 300;
     text-transform: uppercase;
+    font-size: 1.7rem;
 
     span {
       font-weight: 700;
