--- a/src/containers/BattlelogPage.module.scss
+++ b/src/containers/BattlelogPage.module.scss
@@ -4,4 +4,5 @@
   display: block;
   max-width: 1100px;
   margin: 0 auto;
+  padding: 0 15px;
 }
